[package]
name = "ethshuffle-rs"
version = "0.1.0"
authors = ["neve noomo <d3ad.l1n3@yandex.ru>"]
edition = "2018"

[dependencies]
# Data Serialization/Deserialization
serde = { version = "^1.0.124", features = ["derive"] }
bincode = "^1.3.2"
# Signatures
ed25519-dalek = "^1.0.1"
# Async
tokio = { version = "^1.3.0", features = ["full"] }
futures = "^0.3.13"
tokio-stream = { version = "^0.1.4", features = ["net"] }
# CLI
clap = "^2.33.3"
