[package]
name = "ethshuffle-rs"
version = "0.1.0"
authors = ["neve noomo <d3ad.l1n3@yandex.ru>"]
edition = "2018"

[dependencies]
# Data Serialization/Deserialization
serde = { version = "^1.0.124", features = ["derive"] }
bincode = "^1.3.2"
bytes = "^1.0.1"
# Signatures
ed25519-dalek = "^1.0.1"
# Async
tokio1 = { package = "tokio", version = "^1.3.0", features = ["full"] }
futures = "^0.3.13"
tokio-util = { version = "0.6.4", features = ["full"] }
# CLI
clap = "^2.33.3"
# web3
web3 = "^0.15.0"
ethabi = "13.0.0"
env_logger = "0.8"
hex-literal = "0.3"
wasm-bindgen-test = "0.3.19"
tokio2 = { package = "tokio", version = "0.2.0", features = ["full"] }