[package]
name = "ethshuffle-rs"
version = "0.1.0"
authors = ["neve noomo <d3ad.l1n3@yandex.ru>"]
edition = "2018"

[dependencies]
# Data Serialization/Deserialization
serde = { version = "^1.0.124", features = ["derive"] }
bincode = "^1.3.2"
bytes = "^1.0.1"
rustc-hex = "^2.1.0"
# Cryptography
ethkey = "^0.3.1"
sha3 = "^0.9.1"
ecies-ed25519 = { version="^0.5.0", default-features = true, features = ["serde"]}
rand = "^0.7.3"
rand_chacha = "^0.2.1"
generic-array = "^0.14.4"
# Async
tokio1 = { package = "tokio", version = "^1.3.0", features = ["full"] }
futures = "^0.3.13"
tokio-util = { version = "0.6.4", features = ["full"] }
# CLI
clap = "^2.33.3"
# web3
web3 = { version = "^0.15.0", default-features = false, features = ["http", "signing"] }
ethabi = "13.0.0"
env_logger = "0.8"
hex-literal = "0.3"
wasm-bindgen-test = "0.3.19"
tokio2 = { package = "tokio", version = "0.2.0", features = ["full"] }
hex = "0.4"
